# NBA-Analysis

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  alembic.ini  pyproject.toml  run_daily_update.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/04-dashboard/: 04-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 003_add_predictions.py  83f355add86d_add_feature_tables.py
scripts/: banner.py  cli.py  compute_elo.py  daily_update.py  daily_update_notify.py  efficient_sync.py  espn_sync.py  fast_boxscore_sync.py  fix_data.py  fix_game_dates_proper.py  fix_games.py  llm.py  nba  predict.py  test_patterns.py  train_model.py  train_model_v2.py  train_poc.py  train_poc_fast.py  train_poc_v2.py  train_poc_v3.py  train_poc_v4.py  tui.py  ultra_fast_sync.py
src/hermes/: __main__.py  cli.py  config.py
src/sportsprediction/: __init__.py  __main__.py  cli.py  config.py
tests/: conftest.py
tests/agent/: conftest.py  test_agent.py  test_tools.py  test_tui.py
tests/data/: conftest.py  test_adapters.py  test_advanced_features.py  test_daily_sync.py  test_game_sync.py  test_historical_load.py  test_injuries_adapter.py  test_injury_sync.py  test_matchup_features.py  test_models.py  test_nba_api_adapter.py  test_player_sync.py  test_prediction_models.py  test_rate_limiter.py  test_rolling_features.py  test_team_features.py  test_team_sync.py  test_temporal_leakage.py
tests/models/: test_base_model.py  test_game_predictor.py  test_metrics.py  test_outcome_resolver.py  test_player_predictor.py  test_prediction_engine.py  test_totals_predictor.py
(+128 files in other folders)
