[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-analysis"
version = "0.1.0"
description = "NBA analytics and prediction platform"
requires-python = ">=3.10"
dependencies = [
    "nba_api>=1.11,<1.12",
    "nbainjuries>=1.1,<1.2",
    "sqlalchemy>=2.0,<2.2",
    "alembic>=1.13",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "scikit-learn>=1.7,<1.8",
    "joblib>=1.3",
    "streamlit>=1.35,<2.0",
    "plotly>=5.22,<6.0",
    "smolagents[litellm]>=1.2",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
hermes = "hermes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
